edits on interivew.md
edits on interivew.md

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
+relative_permalinks: false
 paginate:     8
 paginate_path: "/blog/page:num/"
 sass:
