--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,11 @@
 news:
+
+  - title: "Invited to talk about EduGPT on UNESCO's flagship Digital Learning Week at UNESCO Headquarters in Paris, France."
+    date: "07/2023"
+
+  - title: "Four standards of AGI model for education were released at WAIC'2023."
+    date: "07/2023"
+
   - title: "One paper was accepted by KDD'2023."
     date: "05/2023"
 
