--- a/_data/achievements.yaml
+++ b/_data/achievements.yaml
@@ -61,25 +61,25 @@ achievements:
 
   - title: "Data processing method, electronic device and computer-readable medium"
     patent_no: "Pub.No.:US202/0358362A1"
-    date: "Pub.Date: Nov. 10,2022"
+    date: "Pub.Date: Nov. 10, 2022"
     us_patent: y
 
 
   - title: "Method for determining teaching style, and computer storage medium"
     patent_no: "Pub.No.:US202/027016A1"
-    date: "Pub.Date: Aug. 25,2022"
+    date: "Pub.Date: Aug. 25, 2022"
     us_patent: y
 
 
   - title: "Data reduction for node graph creation"
-    patent_no: "PatentNo.: US11,256,747B1"
-    date: "Date of Patent: Feb. 22,2022"
+    patent_no: "Patent No.: US11,256,747B1"
+    date: "Date of Patent: Feb. 22, 2022"
     us_patent: y
 
 
   - title: "Method and apparatus for object preference prediction, and computer readable medium"
-    patent_no: "Pub.No.:US202/04137A1"
-    date: "Pub.Date: Feb.10,2022"
+    patent_no: "Patent No.: US11,651,255B2"
+    date: "Date of Patent: May 16, 2023"
     us_patent: y
 
 
