--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "Four papers was accepted by CIKM'2023."
+    date: "08/2023"
+
+  - title: "One US patent was granted."
+    date: "07/2023"
+
   - title: "Invited to talk about EduGPT on UNESCO's flagship Digital Learning Week at UNESCO Headquarters in Paris, France."
     date: "07/2023"
 
