--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2024."
+    date: "09/2023"
+
+  - title: "Nominated as Program Chair for the 25th International Conference on Artificial Intelligence in Education (AIED'2024)."
+    date: "09/2023"
+
   - title: "Four papers was accepted by CIKM'2023."
     date: "08/2023"
 
