add news and pub

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One paper was accepted by NeurIPS'2023."
+    date: "09/2023"
+
   - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2024."
     date: "09/2023"
 
