--- a/_data/achievements.yaml
+++ b/_data/achievements.yaml
@@ -49,8 +49,8 @@ achievements:
     standard: y
 
   - title: "Sentence type recognition method and apparatus, electronic device, and storage medium"
-    patent_no: "Pub. No.: US 2023/0134101 A1"
-    date: "Pub. Date: May 4, 2023"
+    patent_no: "Patent No.: US11,775,769B2"
+    date: "Date of Patent: Oct 03, 2023"
     us_patent: y
 
 
