add GCCCE 2024 workshop chairs

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "Nominated as Workshop Chair for the 28th Global Chinese Conference on Computers in Education (GCCCE'2024)."
+    date: "10/2023"
+
   - title: "One paper was accepted by NeurIPS'2023."
     date: "09/2023"
 
