--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "Received 2023 TOP 100 Open Source Achievement Award from BenchCouncil."
+    date: "12/2023"
+
+  - title: "Invited to serve as a Senior PC member of IJCAI'2024."
+    date: "12/2023"
+
   - title: "Nominated as Workshop Chair for the 28th Global Chinese Conference on Computers in Education (GCCCE'2024)."
     date: "10/2023"
 
