--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "One paper was accepted by CHI'2024."
+    date: "01/2024"
+
+  - title: "Received 3rd Service Industry Technology Innovation Award from China General Chamber of Commerce."
+    date: "12/2023"
+
   - title: "Received 2023 TOP 100 Open Source Achievement Award from BenchCouncil."
     date: "12/2023"
 
