--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One paper was accepted by IEEE TVCG'2024."
+    date: "01/2024"
+
   - title: "One white paper of 3D content generation was released at 2024 ZGC Forum."
     date: "01/2024"
 
