--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One paper was accepted by CHI'2024."
+    date: "03/2024"
+
   - title: "One paper was accepted by IEEE TVCG'2024."
     date: "01/2024"
 
