--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "One paper was accepted by IJCAI'2024."
+    date: "04/2024"
+
+  - title: "Two papers was accepted by AIED'2024."
+    date: "04/2024"
+
   - title: "One paper was accepted by CHI'2024."
     date: "03/2024"
 
