--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,17 @@
 news:
 
+  - title: "Our LLM based AI tutor was showcased at 2024 World AI Conference@Shanghai."
+    date: "07/2024"
+
+  - title: "One paper was accepted by ECAI'2024."
+    date: "07/2024"
+
+  - title: "Our LLM based AI tutor was showcased at 2024 Global Digital Economy Conference@Beijing."
+    date: "06/2024"
+
+  - title: "One paper was accepted by TKDD'2024."
+    date: "06/2024"
+
   - title: "One paper was accepted by IJCAI'2024."
     date: "04/2024"
 
