--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "Two papers were accepted by CIKM'2024."
+    date: "07/2024"
+
   - title: "Our LLM based AI tutor was showcased at 2024 World AI Conference@Shanghai."
     date: "07/2024"
 
