add recent news

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,14 @@
 news:
 
+  - title: "Won 1st prize at 2024 Beijing Data X Competition (Education Track)."
+    date: "10/2024"
+
+  - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2025."
+    date: "09/2024"
+
+  - title: "Won 1st prize at Innovation Competition (Education Track) at 2024 China Internet Conference."
+    date: "07/2024"
+
   - title: "Two papers were accepted by CIKM'2024."
     date: "07/2024"
 
