--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -6,6 +6,9 @@ news:
   - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2025."
     date: "09/2024"
 
+  - title: "Invited to serve as an Area Chair of AISTATS'2025."
+    date: "09/2024"
+
   - title: "Won 1st prize at Innovation Competition (Education Track) at 2024 China Internet Conference."
     date: "07/2024"
 
