remove old news

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -42,59 +42,59 @@ news:
   - title: "One white paper of 3D content generation was released at 2024 ZGC Forum."
     date: "01/2024"
 
-  - title: "Received 3rd Service Industry Technology Innovation Award from China General Chamber of Commerce."
-    date: "12/2023"
+  # - title: "Received 3rd Service Industry Technology Innovation Award from China General Chamber of Commerce."
+  #   date: "12/2023"
 
-  - title: "Received 2023 TOP 100 Open Source Achievement Award from BenchCouncil."
-    date: "12/2023"
+  # - title: "Received 2023 TOP 100 Open Source Achievement Award from BenchCouncil."
+  #   date: "12/2023"
 
-  - title: "Invited to serve as a Senior PC member of IJCAI'2024."
-    date: "12/2023"
+  # - title: "Invited to serve as a Senior PC member of IJCAI'2024."
+  #   date: "12/2023"
 
-  - title: "Nominated as Workshop Chair for the 28th Global Chinese Conference on Computers in Education (GCCCE'2024)."
-    date: "10/2023"
+  # - title: "Nominated as Workshop Chair for the 28th Global Chinese Conference on Computers in Education (GCCCE'2024)."
+  #   date: "10/2023"
 
-  - title: "One paper was accepted by NeurIPS'2023."
-    date: "09/2023"
+  # - title: "One paper was accepted by NeurIPS'2023."
+  #   date: "09/2023"
 
-  - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2024."
-    date: "09/2023"
+  # - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2024."
+  #   date: "09/2023"
 
-  - title: "Nominated as Program Chair for the 25th International Conference on Artificial Intelligence in Education (AIED'2024)."
-    date: "09/2023"
+  # - title: "Nominated as Program Chair for the 25th International Conference on Artificial Intelligence in Education (AIED'2024)."
+  #   date: "09/2023"
 
-  - title: "Four papers was accepted by CIKM'2023."
-    date: "08/2023"
+  # - title: "Four papers was accepted by CIKM'2023."
+  #   date: "08/2023"
 
-  - title: "One US patent was granted."
-    date: "07/2023"
+  # - title: "One US patent was granted."
+  #   date: "07/2023"
 
-  - title: "Invited to talk about EduGPT on UNESCO's flagship Digital Learning Week at UNESCO Headquarters in Paris, France."
-    date: "07/2023"
+  # - title: "Invited to talk about EduGPT on UNESCO's flagship Digital Learning Week at UNESCO Headquarters in Paris, France."
+  #   date: "07/2023"
 
-  - title: "Four standards of AGI model for education were released at WAIC'2023."
-    date: "07/2023"
+  # - title: "Four standards of AGI model for education were released at WAIC'2023."
+  #   date: "07/2023"
 
-  - title: "One paper was accepted by KDD'2023."
-    date: "05/2023"
+  # - title: "One paper was accepted by KDD'2023."
+  #   date: "05/2023"
 
-  - title: "Invited to serve as a Senior PC member of AAAI'2024."
-    date: "05/2023"
+  # - title: "Invited to serve as a Senior PC member of AAAI'2024."
+  #   date: "05/2023"
 
-  - title: "One paper was accepted by the International Journal of Human-Computer Interaction (IJHCI'2023)."
-    date: "05/2023"
+  # - title: "One paper was accepted by the International Journal of Human-Computer Interaction (IJHCI'2023)."
+  #   date: "05/2023"
 
-  - title: "One paper was accepted by ICML'2023."
-    date: "04/2023"
+  # - title: "One paper was accepted by ICML'2023."
+  #   date: "04/2023"
 
-  - title: "Papers were accepted by AIED'2023, EDM'2023."
-    date: "04/2023"
+  # - title: "Papers were accepted by AIED'2023, EDM'2023."
+  #   date: "04/2023"
 
-  - title: "Three Papers were accepted by SIGIR'2023."
-    date: "04/2023"
+  # - title: "Three Papers were accepted by SIGIR'2023."
+  #   date: "04/2023"
 
-  - title: "One paper was accepted by ITS'2023."
-    date: "03/2023"
+  # - title: "One paper was accepted by ITS'2023."
+  #   date: "03/2023"
 
-  - title: "Three Papers were accepted by WWW'2023."
-    date: "01/2023"
+  # - title: "Three Papers were accepted by WWW'2023."
+  #   date: "01/2023"
