--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "One paper was accepted by ESWA'2025."
+    date: "12/2024"
+
+  - title: "One paper was accepted by KDD'2025."
+    date: "11/2024"
+
   - title: "Won 1st prize at 2024 Beijing Data X Competition (Education Track)."
     date: "10/2024"
 
