add aaai2025 papers

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "Four papers were accepted by AAAI'2025."
+    date: "12/2024"
+
   - title: "One paper was accepted by ESWA'2025."
     date: "12/2024"
 
