--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One standard of Ethical AI was released by China Technology Market Association."
+    date: "12/2024"
+
   - title: "Four papers were accepted by AAAI'2025."
     date: "12/2024"
 
