--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,14 @@
 news:
 
+  - title: "One paper was accepted by ICLR'2025."
+    date: "01/2025"
+
+  - title: "Three papers were accepted by WWW'2025."
+    date: "01/2025"
+
+  - title: "One paper was published by Machine Learning Journal."
+    date: "01/2025"
+
   - title: "One standard of Ethical AI was released by China Technology Market Association."
     date: "12/2024"
 
