--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One paper was published by Machine Learning Journal."
+    date: "02/2025"
+
   - title: "One paper was accepted by ICLR'2025."
     date: "01/2025"
 
