--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -15,59 +15,59 @@ news:
   - title: "One paper was published by Machine Learning Journal."
     date: "01/2025"
 
-  - title: "One standard of Ethical AI was released by China Technology Market Association."
-    date: "12/2024"
+  # - title: "One standard of Ethical AI was released by China Technology Market Association."
+  #   date: "12/2024"
 
-  - title: "Four papers were accepted by AAAI'2025."
-    date: "12/2024"
+  # - title: "Four papers were accepted by AAAI'2025."
+  #   date: "12/2024"
 
-  - title: "One paper was accepted by ESWA'2025."
-    date: "12/2024"
+  # - title: "One paper was accepted by ESWA'2025."
+  #   date: "12/2024"
 
-  - title: "One paper was accepted by KDD'2025."
-    date: "11/2024"
+  # - title: "One paper was accepted by KDD'2025."
+  #   date: "11/2024"
 
-  - title: "Won 1st prize at 2024 Beijing Data X Competition (Education Track)."
-    date: "10/2024"
+  # - title: "Won 1st prize at 2024 Beijing Data X Competition (Education Track)."
+  #   date: "10/2024"
 
-  - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2025."
-    date: "09/2024"
+  # - title: "Our Artificial Intelligence for Education workshop was accepted at AAAI'2025."
+  #   date: "09/2024"
 
-  - title: "Invited to serve as an Area Chair of AISTATS'2025."
-    date: "09/2024"
+  # - title: "Invited to serve as an Area Chair of AISTATS'2025."
+  #   date: "09/2024"
 
-  - title: "Won 1st prize at Innovation Competition (Education Track) at 2024 China Internet Conference."
-    date: "07/2024"
+  # - title: "Won 1st prize at Innovation Competition (Education Track) at 2024 China Internet Conference."
+  #   date: "07/2024"
 
-  - title: "Two papers were accepted by CIKM'2024."
-    date: "07/2024"
+  # - title: "Two papers were accepted by CIKM'2024."
+  #   date: "07/2024"
 
-  - title: "Our LLM based AI tutor was showcased at 2024 World AI Conference@Shanghai."
-    date: "07/2024"
+  # - title: "Our LLM based AI tutor was showcased at 2024 World AI Conference@Shanghai."
+  #   date: "07/2024"
 
-  - title: "One paper was accepted by ECAI'2024."
-    date: "07/2024"
+  # - title: "One paper was accepted by ECAI'2024."
+  #   date: "07/2024"
 
-  - title: "Our LLM based AI tutor was showcased at 2024 Global Digital Economy Conference@Beijing."
-    date: "06/2024"
+  # - title: "Our LLM based AI tutor was showcased at 2024 Global Digital Economy Conference@Beijing."
+  #   date: "06/2024"
 
-  - title: "One paper was accepted by TKDD'2024."
-    date: "06/2024"
+  # - title: "One paper was accepted by TKDD'2024."
+  #   date: "06/2024"
 
-  - title: "One paper was accepted by IJCAI'2024."
-    date: "04/2024"
+  # - title: "One paper was accepted by IJCAI'2024."
+  #   date: "04/2024"
 
-  - title: "Two papers was accepted by AIED'2024."
-    date: "04/2024"
+  # - title: "Two papers was accepted by AIED'2024."
+  #   date: "04/2024"
 
-  - title: "One paper was accepted by CHI'2024."
-    date: "03/2024"
+  # - title: "One paper was accepted by CHI'2024."
+  #   date: "03/2024"
 
-  - title: "One paper was accepted by IEEE TVCG'2024."
-    date: "01/2024"
+  # - title: "One paper was accepted by IEEE TVCG'2024."
+  #   date: "01/2024"
 
-  - title: "One white paper of 3D content generation was released at 2024 ZGC Forum."
-    date: "01/2024"
+  # - title: "One white paper of 3D content generation was released at 2024 ZGC Forum."
+  #   date: "01/2024"
 
   # - title: "Received 3rd Service Industry Technology Innovation Award from China General Chamber of Commerce."
   #   date: "12/2023"
