--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,7 +1,13 @@
 news:
 
+  - title: "Invited to serve as a Senior PC member of CIKM'2025."
+    date: "03/2025"
+
   - title: "One paper was accepted by TKDE'2025."
     date: "03/2025" 
+
+  - title: "Invited to serve as a Senior PC member of AIED'2025."
+    date: "02/2025"
 
   - title: "One paper was published by Machine Learning Journal."
     date: "02/2025"
