add aied paper acceptance

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,11 @@
 news:
 
+  - title: "One paper was accepted by SIGIR'2025."
+    date: "04/2025" 
+
+  - title: "One paper was accepted by AIED'2025."
+    date: "04/2025" 
+
   - title: "Invited to serve as a Senior PC member of CIKM'2025."
     date: "03/2025"
 
