add ijcai paper

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -3,6 +3,9 @@ news:
   - title: "One paper was accepted by ACM Computing Survey'2025."
     date: "04/2025" 
 
+  - title: "One paper was accepted by IJCAI'2025."
+    date: "04/2025" 
+
   - title: "One paper was accepted by SIGIR'2025."
     date: "04/2025" 
 
