--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,14 @@
 news:
 
+  - title: "One paper was accepted by Information Fusion'2025."
+    date: "07/2025" 
+
+  - title: "One standard of Educational LLM Evaluation was released by China Electronics Standardization Association."
+    date: "07/2025"
+
+  - title: "Invited to serve as a Senior PC member of AAAI'2026."
+    date: "05/2025"
+
   - title: "One paper was accepted by ACM Computing Survey'2025."
     date: "04/2025" 
 
