add neurocomputing paper

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One paper was accepted by Neurocomputing'2025."
+    date: "08/2025" 
+
   - title: "One paper was accepted by EMNLP Findings'2025."
     date: "08/2025" 
 
