--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,20 @@
 news:
 
+  - title: "One paper was accepted by NeurIPS'2025."
+    date: "09/2025" 
+
+  - title: "One paper was accepted by Nature Humanities and Social Sciences Communications'2025."
+    date: "09/2025" 
+
+  - title: "Two patents was accepted by China National Intellectual Property Administration."
+    date: "09/2025" 
+
+  - title: "Invited to serve as a Senior PC member of WWW'2026."
+    date: "09/2025"
+
+  - title: "Our AI4EDU workshop accepted by AAAI'2026."
+    date: "08/2025" 
+
   - title: "One paper was accepted by Neurocomputing'2025."
     date: "08/2025" 
 
