--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -6,7 +6,7 @@ news:
   - title: "One paper was accepted by Nature Humanities and Social Sciences Communications'2025."
     date: "09/2025" 
 
-  - title: "Two patents was accepted by China National Intellectual Property Administration."
+  - title: "Two patents was granted by China National Intellectual Property Administration."
     date: "09/2025" 
 
   - title: "Invited to serve as a Senior PC member of WWW'2026."
