--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One national standard was released by National Standardization Administration."
+    date: "10/2025"
+
   - title: "One paper was accepted by NeurIPS'2025."
     date: "09/2025" 
 
