--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "Two papers were accepted by AAAI'2026."
+    date: "11/2025" 
+
   - title: "One national standard was released by National Standardization Administration."
     date: "10/2025"
 
