add aistats paper

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,5 +1,8 @@
 news:
 
+  - title: "One paper was accepted by AISTATS'2026."
+    date: "01/2026" 
+
   - title: "Two papers were accepted by WWW'2026."
     date: "01/2026" 
 
